<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dark_cold_shade">

    <!-- Картинка на весь экран -->
    <ImageView
        android:id="@+id/fullImageView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:scaleType="fitCenter"
        android:contentDescription="@string/full_image"
        app:layout_constraintBottom_toTopOf="@id/bottomButtons"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- Контейнер для кнопок внизу -->
    <LinearLayout
        android:id="@+id/bottomButtons"
        style="?android:attr/buttonBarStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:padding="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <!-- Кнопка Удалить (не работает, как вы просили) -->
        <Button
            android:id="@+id/btnDelete"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginEnd="10dp"
            android:text="@string/del"
            android:backgroundTint="#D32F2F"
            android:textColor="@android:color/white"
            app:cornerRadius="10dp" />

        <!-- Кнопка Закрыть -->
        <Button
            android:id="@+id/btnClose"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginStart="10dp"
            android:text="@string/zak"
            android:backgroundTint="@color/grayish_green_shade"
            android:textColor="@android:color/white"
            app:cornerRadius="10dp" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>